# Internationalization

./: CMakeLists.txt  Main.qml  main.cpp  stringids.h
android/: AndroidManifest.xml  build.gradle
translations/: app_da.ts  app_de.ts  app_en.ts  app_es.ts  app_fi.ts  app_fr.ts  app_it.ts  app_nl.ts  app_no.ts  app_pt.ts  app_sv.ts  stringids_header_from_xlsx.py  stringids_translations.py  translations.xlsx
